--- a/css/style.scss
+++ b/css/style.scss
@@ -90,6 +90,10 @@ ul li {
         margin-right: 16px;
         cursor: pointer;
     }
+
+    .task-done {
+        text-decoration: line-through;
+    }
 }
 
 footer {
