Implementing IIFE for security

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Circular Std", sans-serif;
+    font-family: "Circular std", sans-serif;
 }
 
 @mixin flex($align, $justify) {
