--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Circular Std", sans-serif;
+  font-family: "Circular std", sans-serif;
 }
 
 body {
