--- a/css/style.scss
+++ b/css/style.scss
@@ -68,6 +68,8 @@ section.todo-list {
 
     position: relative;
 
+    overflow-y: auto;
+
     h3 {
         font-size: 1.4rem;
         font-weight: 500;
@@ -75,7 +77,7 @@ section.todo-list {
         padding-bottom: 8px;
         border-bottom: 2px solid #F0F0F0;
         text-align: center;
-        margin-bottom: 64px;
+        margin-bottom: 48px;
     }
 }
 
@@ -105,6 +107,7 @@ ul li {
 footer {
     @include flex(flex-end, space-between);
     width: 100%;
+    margin: 16px 0;
 }
 
 footer button {
