--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,10 @@ ul li {
         cursor: pointer;
     }
 
+    img.icon-done {
+        width: 18px;
+    }
+
     .task-done {
         text-decoration: line-through;
     }
@@ -146,3 +150,34 @@ footer input {
     }
 }
 
+@media screen and (max-width: 1160px) {
+    .container {
+        padding: 32px;
+    }
+}
+
+@media screen and (max-width: 940px) {
+    section.todo-list {
+        width: 60%;
+    }
+
+    section.welcome {
+        padding-left: 42px;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    section.welcome {
+        display: none;
+    }
+
+    section.todo-list {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    section.todo-list {
+        width: 95%;
+    }
+}
