--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Circular std", sans-serif;
+    font-family: "Be Vietnam Pro", sans-serif;
 }
 
 @mixin flex($align, $justify) {
@@ -17,7 +17,6 @@ body {
     width: 100%;
     height: 100vh;
     background: $bg-color;
-
     @include flex(center, center);
 }
 
@@ -36,7 +35,7 @@ section.welcome {
     }
 
     h2 {
-        font-weight: 500;
+        font-weight: 600;
         font-size: 2.5rem;
         line-height: 110%;
         color: $main-color-dark;
